@@ -109,6 +109,10 @@
 	- rpmdb iterator selectors permit default/strcmp/regex/glob matching.
 	- rpmdb iterator selectors permit negative matches.
 	- alpha: don't add "()(64bit)" dependency markers.
+	- ia64/sparc: <arch>.{req,prov} identical to linux.{req,prov}.
+	- add "rpmlib(ScriptletInterpreterArgs)" to track
+	    %post -p "/sbin/ldconfig -n /usr/lib"
+	  incompatibilities.
 
 4.0 -> 4.0.2
 	- fix: avoid calling getpass twice as side effect of xstrdup macro
